// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconExpiration should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-expiration "
  height={15}
  viewBox="0 0 14 15"
  width={14}
>
  <g
    fill="none"
    fillRule="evenodd"
    transform="translate(0 -1)"
  >
    <circle
      className="stroke-color"
      cx="7.16"
      cy="9.5"
      r="5.5"
      stroke="#444444"
    />
    <rect
      className="fill-color"
      fill="#444444"
      height="5"
      rx=".5"
      width="1"
      x="6.66"
      y="6"
    />
    <rect
      className="fill-color"
      fill="#444444"
      height="1"
      rx=".5"
      width="3"
      x="6.66"
      y="10"
    />
    <rect
      className="fill-color"
      fill="#444444"
      height="1"
      rx=".5"
      transform="rotate(30 11.16 2.5)"
      width="5"
      x="8.66"
      y="2"
    />
    <rect
      className="fill-color"
      fill="#444444"
      height="1"
      rx=".5"
      transform="rotate(-30 3.16 2.5)"
      width="5"
      x=".66"
      y="2"
    />
  </g>
</AccessibleSVG>
`;

exports[`icons/general/IconExpiration should correctly render icon with additional props 1`] = `
<AccessibleSVG
  className="icon-expiration class"
  height={100}
  title="title"
  viewBox="0 0 14 15"
  width={200}
>
  <g
    fill="none"
    fillRule="evenodd"
    transform="translate(0 -1)"
  >
    <circle
      className="stroke-color"
      cx="7.16"
      cy="9.5"
      r="5.5"
      stroke="#000"
    />
    <rect
      className="fill-color"
      fill="#000"
      height="5"
      rx=".5"
      width="1"
      x="6.66"
      y="6"
    />
    <rect
      className="fill-color"
      fill="#000"
      height="1"
      rx=".5"
      width="3"
      x="6.66"
      y="10"
    />
    <rect
      className="fill-color"
      fill="#000"
      height="1"
      rx=".5"
      transform="rotate(30 11.16 2.5)"
      width="5"
      x="8.66"
      y="2"
    />
    <rect
      className="fill-color"
      fill="#000"
      height="1"
      rx=".5"
      transform="rotate(-30 3.16 2.5)"
      width="5"
      x=".66"
      y="2"
    />
  </g>
</AccessibleSVG>
`;
